--- a/Chart.yaml
+++ b/Chart.yaml
@@ -26,6 +26,6 @@
 
 apiVersion: v1
 appVersion: "1.0"
-description: A Helm chart for Kubernetes
+description: NVIDIA Inference Server.
 name: nvidia-inference-server
 version: 1.0.0
