--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -28,6 +28,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "nvidia-inference-server.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "nvidia-inference-server.name" . }}
     chart: {{ template "nvidia-inference-server.chart" . }}
