--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -66,7 +66,9 @@ spec:
             - containerPort: 8000
               name: http
             - containerPort: 8001
+              name: grpc
             - containerPort: 8002
+              name: metrics
           livenessProbe:
             httpGet:
               path: /api/health/live
