--- a/values.yaml
+++ b/values.yaml
@@ -29,8 +29,7 @@ replicaCount: 1
 backend:
   name: tensorrt
   deployment:
-    imageName: renaudwastaken/tensorrtserver:19.02-py3
-    modelRepositoryPath: /models
+    imageName: nvcr.io/nvidia/tensorrtserver:19.02-py3
     numGpus: 1
 
   service:
